--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="max-w-7xl mx-auto p-4 md:p-8">
         <header class="flex flex-col md:flex-row justify-between items-start md:items-center mb-8 gap-4">
             <div class="flex items-center gap-6">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Hitachi_logo.svg" alt="Hitachi" class="w-32">
+                <img src="https://www.hitachi.com/content/dam/hitachi/common/image/hitachi-logo.png" alt="Hitachi" class="w-32">
                 <div class="h-8 w-px bg-slate-300 hidden md:block"></div>
                 <div>
                     <h1 class="text-2xl font-bold tracking-tight">DBU Web Journey</h1>
